syntax = "proto3";

package currency;

option go_package = "/proto;currency";

service CurrencyConverter {
  rpc Convert (ConvertRequest) returns (ConvertResponse);
}

message ConvertRequest {
  string senderCurrencyType = 1;
  string receiverCurrencyType = 2;
  double amount = 3;
}

message ConvertResponse {
  double convertedAmount = 1;
}